<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgcolor"
    tools:context=".Contacts">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="@color/asideBgcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="607dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/sales_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hotdeal" />

        <TextView
            android:id="@+id/about"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:onClick="goToProNas"
            android:rotation="270"
            android:text="@string/about_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/main_scene"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:onClick="goToMain"
            android:rotation="270"
            android:text="@string/main_scene_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/contacts"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginBottom="120dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/contacts_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/logo_app_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/logo_of_app_1"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo_app_2"
        android:layout_width="91dp"
        android:layout_height="61dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/logo_of_app_2"
        android:textColor="@color/name_of_app"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/logo_app_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="277dp"
        android:layout_height="93dp"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/contact_gan"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="254dp"
        android:layout_height="46dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/contact_con"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="176dp"
        android:background="@color/asideBgcolor"
        android:onClick="goToYou"
        android:text="@string/youtube"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/asideBgcolor"
        android:onClick="goToVk"
        android:text="@string/vk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="43dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="108dp"
        android:contentDescription="@string/app_name"
        android:onClick="goToInsta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:srcCompat="@drawable/inst" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="44dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        android:onClick="goToYou"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/you" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="44dp"
        android:layout_height="58dp"
        android:layout_marginTop="312dp"
        app:layoutDescription="@string/app_name"
        android:contentDescription="@string/app_name"
        android:onClick="goToVk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.286"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vk" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layoutDescription="@string/app_name"
        android:layout_marginBottom="68dp"
        android:background="@color/asideBgcolor"
        android:text="@string/insta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>